[tool.poetry]
name = "wandb_experiments"
version = "0.1.0"
description = ""
authors = ["yamayafumiteru <fumiteru322@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]


[tool.pdm]
[tool.pdm.dev-dependencies]
dev = []

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wandb_experiments"
version = "0.1.0"
description = ""
authors = [
    {name = "yamayafumiteru", email = "fumiteru322@gmail.com"},
]
dependencies = [
    "wandb>=0.15.1",
]
requires-python = ">=3.9,<4.0"
license = {text = "MIT"}

[project.urls]
